packages/next-swc/crates/core/tests/errors/next-font-loaders/too-many-args/input.js
import { Inter } from '@next/font/google'
fn({}, 10)
const inter = Inter({}, 10)
Inter({}, 10)
